# packer-resource-reaper

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  GEMINI.md  Makefile  README.md  env.json  pyproject.toml  samconfig.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pr-check.yml
.kiro/specs/packer-resource-reaper/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  python-standards.md  rules.md  structure.md  tech.md
events/: scheduled.json
reaper/: __init__.py  handler.py  models.py
reaper/cleanup/: __init__.py  batch_processor.py  dry_run.py  ec2_manager.py  engine.py  iam_manager.py  network_manager.py  orphan_manager.py  storage_manager.py
reaper/filters/: __init__.py  base.py  identity.py  temporal.py
reaper/notifications/: __init__.py  sns_notifier.py
reaper/state/: __init__.py
reaper/utils/: __init__.py  aws_client.py  config.py  logging.py  security.py
tests/: __init__.py  conftest.py  test_aws_client.py  test_batch_delete.py  test_batch_processor_unit.py  test_cleanup_sequencing.py  test_config.py  test_config_validation.py  test_coverage_100.py  test_dry_run.py  test_dry_run_safety.py  test_ec2_manager.py  test_engine.py  test_error_recovery.py  test_filters_base.py  test_filters_comprehensive.py  test_handler.py  test_handler_comprehensive.py  test_handler_extended.py  test_iam_manager.py  test_identity_filter.py  test_integration_workflow.py  test_key_pair_pattern.py  test_log_level_config.py  test_logging_module.py  test_logging_notifications.py  test_network_manager.py  test_orphan_cleanup_safety.py  test_orphan_identification.py  test_orphan_manager.py  test_orphan_manager_extended.py  test_orphaned_resources.py  test_security_enforcement.py  test_security_validation.py  test_single_account_region_boundary.py  test_sns_notifier.py  test_sns_notifier_extended.py  test_storage_manager.py  test_temporal_filter.py  test_two_criteria_filter.py
