[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packer-resource-reaper"
version = "1.0.0"
description = "AWS Packer Resource Reaper - Serverless zombie resource cleanup"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DevOps Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "moto>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "boto3-stubs[ec2,sns,dynamodb,sts]>=1.34.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reaper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hypothesis]
max_examples = 100
deadline = 5000
suppress_health_check = ["too_slow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "S", "N", "C90"]
ignore = [
    "E501",   # Line length handled by formatter
    "S311",   # random.random() is fine for jitter, not crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Allow asserts in tests
    "S105",  # Allow hardcoded passwords in test assertions
    "S106",  # Allow hardcoded password arguments in test mocks
    "N803",  # Allow uppercase AWS API parameter names (InstanceIds, etc.)
    "SIM102", # Allow nested if statements for readability
    "SIM103", # Allow explicit if/return patterns
    "SIM108", # Allow if/else over ternary for clarity
    "SIM116", # Allow if/elif chains over dict dispatch
    "SIM117", # Allow nested with statements
    "B007",  # Allow unused loop variables
    "C901",  # Allow complex test helper functions
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Allow slightly higher for complex AWS orchestration logic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.coverage.run]
source = ["reaper"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
